--- a/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
+++ b/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
@@ -87,6 +87,14 @@
                             <constraint firstItem="0KX-iF-s2p" firstAttribute="top" secondItem="Edi-d5-JJ0" secondAttribute="bottom" id="zPs-dZ-ZoX"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="EditButton" destination="nsR-uf-1Tl" id="cp1-ae-vMc"/>
+                        <outlet property="filterButton" destination="Cak-ug-Cwp" id="g2p-M3-Wsl"/>
+                        <outlet property="issueNumLabel" destination="YWm-lO-Mc5" id="x0o-hS-TUH"/>
+                        <outlet property="issueTableView" destination="0KX-iF-s2p" id="RYH-QS-GQl"/>
+                        <outlet property="plusButton" destination="SWi-eK-cor" id="D43-er-4f4"/>
+                        <outlet property="searchBar" destination="lz8-qn-0a9" id="eXb-q5-GHi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
