--- a/iOS/issueTrackerApp/issueTrackerApp/Base.lproj/Main.storyboard
+++ b/iOS/issueTrackerApp/issueTrackerApp/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="issueTrackerApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="issueTrackerApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -101,6 +101,45 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="로그인"/>
                             </button>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dwl-09-P2z">
+                                <rect key="frame" x="41.5" y="470.5" width="331" height="44.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="bYm-Ls-aWw">
+                                        <rect key="frame" x="85.5" y="13.5" width="160" height="18"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="github" translatesAutoresizingMaskIntoConstraints="NO" id="bVR-Aa-m5A">
+                                                <rect key="frame" x="0.0" y="0.0" width="14" height="18"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="18" id="5DQ-yF-P5m"/>
+                                                    <constraint firstAttribute="width" constant="14" id="nOS-ck-J5F"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in with GitHub" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y40-0A-bGh">
+                                                <rect key="frame" x="18" y="0.0" width="142" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="bYm-Ls-aWw" firstAttribute="centerY" secondItem="dwl-09-P2z" secondAttribute="centerY" id="RUk-vO-rxG"/>
+                                    <constraint firstItem="bYm-Ls-aWw" firstAttribute="centerX" secondItem="dwl-09-P2z" secondAttribute="centerX" id="lVs-Ea-jTp"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.69999999999999996"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEQ-OC-xnU">
                                 <rect key="frame" x="257" y="379" width="52" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -108,9 +147,9 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqe-MB-KSb">
                                 <rect key="frame" x="41.5" y="470.5" width="331" height="44.5"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <state key="normal" title="Sign in with GitHub">
+                                <state key="normal">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -118,6 +157,9 @@
                                         <integer key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="gitHubLoginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTg-Ba-5zu"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qme-py-Kbq">
                                 <rect key="frame" x="41.5" y="535" width="331" height="44.5"/>
@@ -130,6 +172,7 @@
                             <constraint firstItem="dqe-MB-KSb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.1" id="4it-oe-Ans"/>
                             <constraint firstItem="2tV-IA-7Jv" firstAttribute="centerX" secondItem="3Ng-9N-1ia" secondAttribute="centerX" id="BkF-dF-Gxu"/>
                             <constraint firstItem="2tV-IA-7Jv" firstAttribute="top" secondItem="3Ng-9N-1ia" secondAttribute="bottom" constant="55" id="DGH-kO-xP3"/>
+                            <constraint firstItem="dwl-09-P2z" firstAttribute="bottom" secondItem="dqe-MB-KSb" secondAttribute="bottom" id="EqM-YQ-kcf"/>
                             <constraint firstItem="dqe-MB-KSb" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="JPr-a9-2K5"/>
                             <constraint firstItem="qme-py-Kbq" firstAttribute="centerX" secondItem="dqe-MB-KSb" secondAttribute="centerX" id="Jcb-F0-ipz"/>
                             <constraint firstItem="qme-py-Kbq" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.23" id="NsS-tS-G0J"/>
@@ -139,7 +182,10 @@
                             <constraint firstItem="Qj6-J8-hbn" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.21" id="YDY-Uo-vrs"/>
                             <constraint firstItem="3Ng-9N-1ia" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YsQ-67-xkh"/>
                             <constraint firstItem="wAu-1s-4H4" firstAttribute="centerX" secondItem="3Ng-9N-1ia" secondAttribute="centerX" id="dpC-I1-kdj"/>
+                            <constraint firstItem="dwl-09-P2z" firstAttribute="trailing" secondItem="dqe-MB-KSb" secondAttribute="trailing" id="fbl-AF-w5N"/>
+                            <constraint firstItem="dwl-09-P2z" firstAttribute="top" secondItem="dqe-MB-KSb" secondAttribute="top" id="flj-wV-yKp"/>
                             <constraint firstItem="wAu-1s-4H4" firstAttribute="top" secondItem="2tV-IA-7Jv" secondAttribute="bottom" constant="20" id="jgn-LB-aen"/>
+                            <constraint firstItem="dwl-09-P2z" firstAttribute="centerX" secondItem="dqe-MB-KSb" secondAttribute="centerX" id="kXz-2C-KeO"/>
                             <constraint firstItem="qme-py-Kbq" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="nbq-3x-OcV"/>
                             <constraint firstItem="qme-py-Kbq" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.05" id="vzq-8m-gAy"/>
                             <constraint firstItem="vg5-BD-AOB" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.21" id="wnK-mp-3tJ"/>
@@ -147,6 +193,7 @@
                     </view>
                     <connections>
                         <outlet property="appleLoginButton" destination="qme-py-Kbq" id="JfC-mb-uDd"/>
+                        <outlet property="gitHubLoginButton" destination="dqe-MB-KSb" id="15c-2E-dwo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -155,6 +202,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="github" width="512" height="512"/>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
