--- a/iOS/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/Base.lproj/Main.storyboard
@@ -127,6 +127,30 @@
             </objects>
             <point key="canvasLocation" x="1028.985507246377" y="130.58035714285714"/>
         </scene>
+        <!--Issue List View Controller-->
+        <scene sceneID="Kgv-bt-wFQ">
+            <objects>
+                <viewController storyboardIdentifier="IssueListViewController" id="eQF-Dg-zpw" customClass="IssueListViewController" customModule="issue_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BHx-eN-FXJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Issue List " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eE6-5X-AMW">
+                                <rect key="frame" x="144" y="432" width="126" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Z2U-bp-fT9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hbs-zq-eec" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1901" y="131"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
